# motion_visualizer

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  MotionVisualizer.spec  README.md  docker-compose.yml  motion_visualizer.spec  pyproject.toml
cpp_src/: bindings.cpp  integrator.cpp  integrator.hpp
docs/docs/tz/: tz.tex  tz.xdv
docs/esq/: esq.tex
docs/expl_note/: expl_note.tex
docs/program_description/: prog_desc.tex
docs/tech/: tech.tex  tech.text
docs/tz/: tz.xdv
src/motion_visualizer/: main.py
src/motion_visualizer/database/: db_client.py
src/motion_visualizer/models/: trial_model.py
src/motion_visualizer/visualization/: glwidget.py
