[project]
name = "motion-visualizer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.4.6",
    "pybind11>=3.0.4",
    "pyopengl>=3.1.10",
    "pyside6>=6.11.1",
    "sqlalchemy>=2.0.50",
]

[dependency-groups]
dev = ["black>=26.5.1", "isort>=8.0.1", "mypy>=2.1.0", "pytest>=9.0.3"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/motion_visualizer"]
